--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,15 @@
 name: Deploy
-run-name: Deploy to Fly
+run-name: Deploy to GH Pages
 
 on:
   push:
     branches: [main]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 env:
   CI: true
@@ -11,7 +17,8 @@ env:
 
 jobs:
   build:
-    name: Build and Deploy
+    name: Build and Upload
+
     runs-on: ubuntu-latest
 
     steps:
@@ -26,9 +33,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-turbo-
 
-      - name: Setup Fly
-        uses: superfly/flyctl-actions/setup-flyctl@master
-
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
 
@@ -38,7 +42,23 @@ jobs:
       - name: Run Build
         run: bun run build
 
-      - name: Publish to Fly
-        run: flyctl deploy --remote-only
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      - name: Upload static files as artifact
+        id: artifacts
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: application/dist/
+
+  deploy:
+    name: Deploy
+
+    runs-on: ubuntu-latest
+    needs: build
+
+    environment:
+      name: github-pages
+      url: ${{ steps.artifacts.outputs.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: artifacts
+        uses: actions/deploy-pages@v4
