--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/eslint": "^9.6.1",
 		"eslint": "^9.22.0",
 		"eslint-plugin-astro": "^1.3.1",
+		"eslint-plugin-tailwindcss": "^3.18.0",
 		"sherif": "^1.4.0",
 		"tsup": "^8.4.0",
 		"turbo": "^2.4.4",
