--- a/application/package.json
+++ b/application/package.json
@@ -9,32 +9,26 @@
 		"preview": "astro preview",
 		"start": "astro dev"
 	},
-	"peerDependencies": {
-		"@nestjs/common": "^11.0.11",
-		"expo": "^52.0.37",
-		"expo-router": "^4.0.17"
-	},
 	"dependencies": {
 		"@astrojs/mdx": "^4.1.0",
+		"@astrojs/rss": "^4.0.11",
 		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^5.1.2",
 		"@ceopaludetto/image": "workspace:*",
+		"@ceopaludetto/twoslash": "workspace:*",
 		"@floating-ui/dom": "^1.6.13",
 		"@fontsource/lora": "^5.2.5",
 		"@fontsource/monaspace-neon": "^5.2.5",
 		"@fontsource/poppins": "^5.2.5",
 		"@material/material-color-utilities": "^0.3.0",
+		"@shikijs/twoslash": "^3.1.0",
 		"@tailwindcss/typography": "^0.5.16",
 		"@vercel/og": "^0.6.5",
 		"astro": "^5.4.2",
 		"date-fns": "^4.1.0",
+		"fontaine": "^0.5.0",
 		"lightningcss": "^1.29.2",
 		"mcu-extra": "^0.1.1",
 		"tailwindcss": "^3.4.14"
-	},
-	"devDependencies": {
-		"@ceopaludetto/twoslash": "workspace:*",
-		"@shikijs/twoslash": "^3.1.0",
-		"fontaine": "^0.5.0"
 	}
 }
