--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"packageManager": "bun@1.2.4",
 	"workspaces": [
 		"./application",
-		"./packages/*"
+		"./packages/*",
+		"./posts/*"
 	],
 	"scripts": {
 		"dev": "TURBO_UI=true turbo watch dev",
