feat: add rust image processing post

--- a/posts/rust-image-processing/package.json
+++ b/posts/rust-image-processing/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@ceopaludetto/post-my-blog",
+	"name": "@ceopaludetto/post-rust-image-processing",
 	"type": "module",
 	"version": "0.0.0",
 	"exports": {
@@ -12,6 +12,6 @@
 		"./index.mdx"
 	],
 	"dependencies": {
-		"@material/material-color-utilities": "^0.3.0"
+		"@napi-rs/cli": "^2.18.4"
 	}
 }
