--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@antfu/eslint-config": "^4.8.1",
 		"@total-typescript/tsconfig": "^1.0.4",
 		"@types/eslint": "^9.6.1",
+		"@types/node": "^22.14.0",
 		"eslint": "^9.22.0",
 		"eslint-plugin-astro": "^1.3.1",
 		"eslint-plugin-tailwindcss": "^3.18.0",
