fix: add missing description to last post

--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,7 @@
 			"cache": false
 		},
 		"build": {
+			"inputs": ["./src/**/*", "../posts/**/*"],
 			"dependsOn": ["^build"],
 			"outputs": ["dist/**"]
 		},
